build.log
drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub/osal.c: In function 'osal_timer_create':
drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub/osal.c:586:2: error: implicit declaration of function 'init_timer' [-Werror=implicit-function-declaration]
  init_timer(timer);
  ^
drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub/osal.c:587:18: error: assignment from incompatible pointer type [-Werror]
  timer->function = pTimer->timeoutHandler;
                  ^
drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub/osal.c:588:7: error: 'struct timer_list' has no member named 'data'
  timer->data = (unsigned long)pTimer->timeroutHandlerData;
       ^
cc1: all warnings being treated as errors
make[8]: *** [drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub/osal.o] Error 1
make[8]: *** Waiting for unfinished jobs....
drivers/misc/mediatek/connectivity/wlan/gen2/os/linux/gl_init.c: In function 'createWirelessDevice':
drivers/misc/mediatek/connectivity/wlan/gen2/os/linux/gl_init.c:1619:6: error: 'WIPHY_FLAG_SUPPORTS_SCHED_SCAN' undeclared (first use in this function)
    | WIPHY_FLAG_SUPPORTS_SCHED_SCAN;
      ^
drivers/misc/mediatek/connectivity/wlan/gen2/os/linux/gl_init.c:1619:6: note: each undeclared identifier is reported only once for each function it appears in
make[6]: *** [drivers/misc/mediatek/connectivity/wlan/gen2/os/linux/gl_init.o] Error 1
make[5]: *** [drivers/misc/mediatek/connectivity/wlan/gen2] Error 2
make[4]: *** [drivers/misc/mediatek/connectivity/wlan] Error 2
make[4]: *** Waiting for unfinished jobs....
make[7]: *** [drivers/misc/mediatek/connectivity/common/conn_soc/linux/pub] Error 2
make[7]: *** Waiting for unfinished jobs....
make[6]: *** [drivers/misc/mediatek/connectivity/common/conn_soc/linux] Error 2
make[5]: *** [drivers/misc/mediatek/connectivity/common/conn_soc] Error 2
make[4]: *** [drivers/misc/mediatek/connectivity/common] Error 2
make[3]: *** [drivers/misc/mediatek/connectivity] Error 2
make[2]: *** [drivers/misc/mediatek] Error 2
make[1]: *** [drivers/misc] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [drivers] Error 2
make: *** Waiting for unfinished jobs....
